Revisi Footer, Font, Foto Halaman Home, Galeri

--- a/contact.html
+++ b/contact.html
@@ -82,40 +82,40 @@
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-08.png" alt="Card image cap" />
-              <p class="text-artikel mt-4">WHATSAPP</p>
-              <p class="text-artikel mt-2">0813-4347-8282</p>
+              <p class="text-contact mt-4">WHATSAPP</p>
+              <p class="text-contact mt-2">0813-4347-8282</p>
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-09.png" alt="Card image cap" />
-              <p class="text-artikel mt-4">E-MAIL</p>
-              <p class="text-artikel mt-2">ketimbang.ngemis17@gmail.com</p>
+              <p class="text-contact mt-4">E-MAIL</p>
+              <p class="text-contact mt-2">ketimbang.ngemis17@gmail.com</p>
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-12.png" alt="Card image cap" />
-              <p class="text-artikel mt-4">LINE</p>
-              <p class="text-artikel mt-2">@ndm3476g</p>
+              <p class="text-contact mt-4">LINE</p>
+              <p class="text-contact mt-2">@ndm3476g</p>
             </div>
           </div>
 
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-10.png" alt="Card image cap" />
-              <p class="text-artikel mt-4">YOUTUBE</p>
-              <p class="text-artikel mt-2">Ketimbang Ngemis Bandung</p>
+              <p class="text-contact mt-4">YOUTUBE</p>
+              <p class="text-contact mt-2">Ketimbang Ngemis Bandung</p>
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-11.png" alt="Card image cap" />
-              <p class="text-artikel mt-4">INSTAGRAM</p>
-              <p class="text-artikel mt-2">@ketimbang.ngemis.bandung</p>
+              <p class="text-contact mt-4">INSTAGRAM</p>
+              <p class="text-contact mt-2">@ketimbang.ngemis.bandung</p>
             </div>
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <img width="150" src="assets/img/icon/Ikon Ketimbang Ngemis-13.png" alt="Card image cap" />
-              <p class="text-artikel mt-4">FACEBOOK</p>
-              <p class="text-artikel mt-2">Ketimbang Ngemis Bandung</p>
+              <p class="text-contact mt-4">FACEBOOK</p>
+              <p class="text-contact mt-2">Ketimbang Ngemis Bandung</p>
             </div>
           </div>
         </div>
