--- a/divisi-kreatif.html
+++ b/divisi-kreatif.html
@@ -49,9 +49,9 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero-divisi" style="margin-top: 6rem;">
       <div class="container">
-        <div class="row" style="padding-top: 5rem;">
+        <div class="row" style="padding-top: 2rem;">
           <div class="col-lg-9 mt-auto">
-            <img width="720" height="420" src="assets/img/ilustrasi-divisi/Divisi-Kreatif.png" alt="" />
+            <img class="img-divisi" src="assets/img/ilustrasi-divisi/Divisi-Kreatif.png" alt="" />
           </div>
           <!-- <div class="col-lg-2"></div> -->
           <div class="col-lg-3 mt-auto text-right">
