--- a/galeri.html
+++ b/galeri.html
@@ -106,7 +106,7 @@
         <div class="container" data-aos="fade-up">
           <div class="row counters">
             <div class="col-lg-3 mb-2 text-center">
-              <div class="rectangle-galeri">
+              <div class="rectangle-galeri" style="padding-left: 30px; padding-right: 30px;">
                 GOLONGAN LANSIA BERUSIA 45 TAHUN KEATAS
               </div>
             </div>
@@ -142,11 +142,11 @@
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="250" class="card-img-top" src="assets/img/foto-konten/Galeri-1.png" alt="Card image cap" />
+                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-1.png" alt="Card image cap" />
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Asep
                 </div>
-                <div class="footer-rectangle-galeri">
+                <div class="footer-rectangle-galeri" style="padding-left: 40px; padding-right: 40px;">
                   Seorang pedagang cakue yang sudah bekerja selama lebih dari 40 tahun
                 </div>
               </div>
@@ -154,7 +154,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="250" class="card-img-top" src="assets/img/foto-konten/Galeri-2.png" alt="Card image cap" />
+                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-2.png" alt="Card image cap" />
                 <div class="mid-rectangle-galeri mb-2">
                   Ibu Sukaeni
                 </div>
@@ -166,7 +166,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="250" class="card-img-top" src="assets/img/foto-konten/Galeri-3.png" alt="Card image cap" />
+                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-3.png" alt="Card image cap" />
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Mulyanto
                 </div>
@@ -180,7 +180,7 @@
           <div class="row counters">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="250" class="card-img-top" src="assets/img/foto-konten/Galeri-4.jpg" alt="Card image cap" />
+                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-4.jpg" alt="Card image cap" />
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Maman
                 </div>
@@ -192,7 +192,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="250" class="card-img-top" src="assets/img/foto-konten/Galeri-5.png" alt="Card image cap" />
+                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-5.png" alt="Card image cap" />
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Malik
                 </div>
@@ -204,7 +204,7 @@
 
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="250" class="card-img-top" src="assets/img/foto-konten/Galeri-6.png" alt="Card image cap" />
+                <img width="318" height="207" class="card-img-top" src="assets/img/foto-konten/Galeri-6.png" alt="Card image cap" />
                 <div class="mid-rectangle-galeri mb-2">
                   Pak Ujang
                 </div>
@@ -246,7 +246,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 text-center">
               <div class="card border-card">
-                <img height="350" class="card-img-top" src="assets/img/foto-konten/Galeri-7.png" alt="Card image cap" />
+                <img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-7.png" alt="Card image cap" />
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -254,7 +254,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 mt-4 text-center">
               <div class="card border-card">
-                <img height="350" class="card-img-top" src="assets/img/foto-konten/Galeri-8.png" alt="Card image cap" />
+                <img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-8.png" alt="Card image cap" />
               </div>
             </div>
             <div class="col-lg-3"></div>
@@ -262,7 +262,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 col-sm-6 mb-4 mt-4 text-center">
               <div class="card border-card">
-                <img height="350" class="card-img-top" src="assets/img/foto-konten/Galeri-9.png" alt="Card image cap" />
+                <img width="508" height="296" class="card-img-top" src="assets/img/foto-konten/Galeri-9.png" alt="Card image cap" />
               </div>
             </div>
             <div class="col-lg-3"></div>
