--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
-          <img src="assets/img/konten-header/Header-Home-940x600px.jpg" alt="" class="img-fluid" />
+          <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -168,37 +168,37 @@
           <div class="row">
             <div class="col-lg-4">
               <h2>Artikel</h2>
-              <div class="row mb-5">
+              <div class="row" style="margin-bottom: 40px;">
                 <div class="col">
                   <h5 class="text-justify">Relawan Komunitas Ketimbang Ngemis Bandung Ungkap Alasan Bantu Lansia</h5>
                   <div class="row">
                     <div class="col">
-                      <p class="text-justify">Beberapa relawan yang berasal dari Komunitas Ketimbang Ngemis Bandung menyebutkan alasan mengapa mereka begitu giat dan aktif membantu kaum lansia…..</p>
+                      <p class="text-justify mb-4">Beberapa relawan yang berasal dari Komunitas Ketimbang Ngemis Bandung menyebutkan alasan mengapa mereka begitu giat dan aktif membantu kaum lansia…..</p>
                       <a href="" class="btn btn-artikel mt-5">Baca selengkapnya ></a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col mt-2">
+                <div class="col">
                   <h5 class="text-justify">Ketimbang Ngemis Bandung, Komunitas Yang Berantas Mental Mengemis</h5>
                   <div class="row">
                     <div class="col">
                       <p class="text-justify">Masyarakat Kota Bandung mendukung komunitas Ketimbang Ngemis yang aktif memberi bantuan dan support kepada kaum lansia. Masyarakat menilai komunitas ini bantu……</p>
-                      <a href="" class="btn btn-artikel mt-5 mb-5">Baca selengkapnya ></a>
+                      <a href="" class="btn btn-artikel mt-4 mb-5">Baca selengkapnya ></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-1"></div>
+            <!-- <div class="col-lg-1"></div> -->
 
-            <div class="col-lg-7">
+            <div class="col-lg-8">
               <h2>Kegiatan</h2>
               <div class="row">
                 <div class="col-lg-6">
-                  <img width="300" height="340" src="assets/img/foto-konten/Home-Kegiatan-1.jpg" alt="" />
+                  <img width="330" height="290" src="assets/img/foto-konten/Home-Kegiatan-1.jpg" alt="" />
                 </div>
                 <div class="col-lg-6">
                   <h5 class="text-justify">Penyaluran Bantuan Kepada Ibu Epon di Sekitaran Sekeloa</h5>
@@ -206,14 +206,14 @@
                     <div class="col">
                       <p class="text-justify">Tim utara turun ke lapangan menyalurkan bantuan berupa dana sebesar Rp 2.150.000,- kepada Ibu Epon….</p>
                       <hr class="artikel" />
-                      <p class="text-artikel">11 Januari 2020</p>
+                      <p class="text-artikel" style="margin-bottom: 0;">11 Januari 2020</p>
                       <p class="text-artikel">10.00 WIB</p>
                       <a href="" class="btn btn-artikel">Baca selengkapnya ></a>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 mt-4">
-                  <img width="300" height="340" src="assets/img/foto-konten/Home-Kegiatan-2.jpg" alt="" />
+                  <img width="330" height="290" src="assets/img/foto-konten/Home-Kegiatan-2.jpg" alt="" />
                 </div>
                 <div class="col-lg-6 mt-4">
                   <h5 class="text-justify">Penyaluran Bantuan Donasi dan Sembako Kepada Bapak Oha</h5>
@@ -221,7 +221,7 @@
                     <div class="col">
                       <p class="text-justify">Tim lapangan Ketimbang Ngemis berhasil memberikan donasi sejumlah Rp 2.000.000,- kepada Bapak Oha yang setiap hari….</p>
                       <hr class="artikel" />
-                      <p class="text-artikel">20 Februari 2020</p>
+                      <p class="text-artikel" style="margin-bottom: 0;">20 Februari 2020</p>
                       <p class="text-artikel">13.00 WIB</p>
                       <a href="" class="btn btn-artikel">Baca selengkapnya ></a>
                     </div>
@@ -242,8 +242,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mt-2">
-            <h5 class="text-footer">Ketimbang Ngemis Bandung</h5>
-            <p class="text-justify">
+            <h5>Ketimbang Ngemis Bandung</h5>
+            <p class="text-justify text-footer">
               Komunitas yang bergerak dalam pemberian bantuan dana atau donasi kepada para lansia yang masih giat bekerja walau di usianya yang sudah senja.
             </p>
 
@@ -261,7 +261,7 @@
           </div>
 
           <div class="col-lg-4 mt-2">
-            <h6 class="text-footer">Address</h6>
+            <h6>Address</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
@@ -280,7 +280,7 @@
           </div>
 
           <div class="col-lg-3 mt-2">
-            <h6 class="text-footer">Contact Us</h6>
+            <h6>Contact Us</h6>
             <!-- <ul class="footer-links">
               <li>0813-4347-8282</li>
               <li>@ndm3476g</li>
