--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
               <div class="card mb-4">
                 <div class="text-center bg-card" style="height: 75px;">
                   <div class="mt-4">
-                    <img src="assets/img/foto-konten/Home-1.png" width="100px" height="100px" class="rounded-circle" />
+                    <img src="assets/img/foto-konten/Home-1.png" width="110px" height="110px" class="rounded-circle" />
                   </div>
                 </div>
                 <div class="card-body mt-5 text-center">
-                  <div class="rectangle mb-4">Pak Yanto</div>
+                  <div class="rectangle mt-2 mb-4">Pak Yanto</div>
                   <p>Tukang koran keliling yang setiap hari bekerja dengan hanya menaiki sepeda tua.</p>
                 </div>
                 <div class="footer-rectangle">
@@ -125,11 +125,11 @@
               <div class="card mb-4">
                 <div class="text-center bg-card" style="height: 75px;">
                   <div class="mt-4">
-                    <img src="assets/img/foto-konten/Home-2.png" width="100px" height="100px" class="rounded-circle" />
+                    <img src="assets/img/foto-konten/Home-2.png" width="110px" height="110px" class="rounded-circle" />
                   </div>
                 </div>
                 <div class="card-body mt-5 text-center">
-                  <div class="rectangle mb-4">Bu Sumi</div>
+                  <div class="rectangle mt-2 mb-4">Bu Sumi</div>
                   <p class="card-text">Pedagang camilan ringan dan minuman yang menjalani hidupnya seorang diri.</p>
                 </div>
                 <div class="footer-rectangle">
@@ -143,11 +143,11 @@
               <div class="card mb-4">
                 <div class="text-center bg-card" style="height: 75px;">
                   <div class="mt-4">
-                    <img src="assets/img/foto-konten/Home-3.png" width="100px" height="100px" class="rounded-circle" />
+                    <img src="assets/img/foto-konten/Home-3.png" width="110px" height="110px" class="rounded-circle" />
                   </div>
                 </div>
                 <div class="card-body mt-5 text-center">
-                  <div class="rectangle mb-4">Pak Wawan</div>
+                  <div class="rectangle mt-2 mb-4">Pak Wawan</div>
                   <p class="card-text">Pedagang rempeyek setiap hari berkeliling dan berjalan kaki memikul dagangannya.</p>
                 </div>
                 <div class="footer-rectangle">
@@ -166,15 +166,15 @@
         <div class="container" data-aos="fade-up">
           <!-- <div class="section-header"></div> -->
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4" style="padding-right: 5rem;">
               <h2>Artikel</h2>
-              <div class="row" style="margin-bottom: 40px;">
+              <div class="row" style="margin-bottom: 30px;">
                 <div class="col">
                   <h5 class="text-justify">Relawan Komunitas Ketimbang Ngemis Bandung Ungkap Alasan Bantu Lansia</h5>
                   <div class="row">
                     <div class="col">
                       <p class="text-justify mb-4">Beberapa relawan yang berasal dari Komunitas Ketimbang Ngemis Bandung menyebutkan alasan mengapa mereka begitu giat dan aktif membantu kaum lansia…..</p>
-                      <a href="" class="btn btn-artikel mt-5">Baca selengkapnya ></a>
+                      <a href="" class="btn btn-artikel mt-1">Baca selengkapnya <img style="padding-left: 5px;" width="15" src="assets/img/icon/Panah-Kanan.png" alt="" /></a>
                     </div>
                   </div>
                 </div>
@@ -185,16 +185,14 @@
                   <div class="row">
                     <div class="col">
                       <p class="text-justify">Masyarakat Kota Bandung mendukung komunitas Ketimbang Ngemis yang aktif memberi bantuan dan support kepada kaum lansia. Masyarakat menilai komunitas ini bantu……</p>
-                      <a href="" class="btn btn-artikel mt-4 mb-5">Baca selengkapnya ></a>
+                      <a href="" class="btn btn-artikel mt-2 mb-4">Baca selengkapnya <img style="padding-left: 5px;" width="15" src="assets/img/icon/Panah-Kanan.png" alt="" /></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!-- <div class="col-lg-1"></div> -->
-
-            <div class="col-lg-8">
+            <div class="col-lg-8" style="padding-left: 70px;">
               <h2>Kegiatan</h2>
               <div class="row">
                 <div class="col-lg-6">
@@ -208,7 +206,7 @@
                       <hr class="artikel" />
                       <p class="text-artikel" style="margin-bottom: 0;">11 Januari 2020</p>
                       <p class="text-artikel">10.00 WIB</p>
-                      <a href="" class="btn btn-artikel">Baca selengkapnya ></a>
+                      <a href="" class="btn btn-artikel">Baca selengkapnya <img style="padding-left: 5px;" width="15" src="assets/img/icon/Panah-Kanan.png" alt="" /></a>
                     </div>
                   </div>
                 </div>
@@ -223,7 +221,7 @@
                       <hr class="artikel" />
                       <p class="text-artikel" style="margin-bottom: 0;">20 Februari 2020</p>
                       <p class="text-artikel">13.00 WIB</p>
-                      <a href="" class="btn btn-artikel">Baca selengkapnya ></a>
+                      <a href="" class="btn btn-artikel">Baca selengkapnya <img style="padding-left: 5px;" width="15" src="assets/img/icon/Panah-Kanan.png" alt="" /></a>
                     </div>
                   </div>
                 </div>
@@ -260,14 +258,14 @@
             <hr class="vl" />
           </div>
 
-          <div class="col-lg-4 mt-2">
+          <div class="col-lg-3 mt-2">
             <h6>Address</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
               </div>
               <div class="col-lg-10">
-                <p class="text-justify">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
+                <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
                 <p class="text-address">Show Map</p>
@@ -279,7 +277,7 @@
             <hr class="vl" />
           </div>
 
-          <div class="col-lg-3 mt-2">
+          <div class="col-lg-4 mt-2">
             <h6>Contact Us</h6>
             <!-- <ul class="footer-links">
               <li>0813-4347-8282</li>
@@ -287,25 +285,25 @@
               <li>ketimbangngemis.bdg@gmail.com</li>
             </ul> -->
             <div class="row">
-              <div class="col-lg-2">
+              <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left">
-                <p>0813-4347-8282</p>
+              <div class="col-lg-11 text-left">
+                <p class="text-footer">0813-4347-8282</p>
               </div>
 
-              <div class="col-lg-2 mt-2">
+              <div class="col-lg-1 mt-2">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left mt-2">
-                <p>@ndm3476g</p>
+              <div class="col-lg-11 text-left mt-2">
+                <p class="text-footer">@ndm3476g</p>
               </div>
 
-              <div class="col-lg-2 mt-2">
+              <div class="col-lg-1 mt-2">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left mt-2">
-                <p>ketimbang.ngemis17@gmail.com</p>
+              <div class="col-lg-11 text-left mt-2">
+                <p class="text-footer">ketimbang.ngemis17@gmail.com</p>
               </div>
               <div class="col footer-newsletter mt-2">
                 <form class="footer-newsletter" action="" method="post"><input type="email" name="email" placeholder="Email Anda..." /><input type="submit" value="Kirim" /></form>
