--- a/divisi-kreatif.html
+++ b/divisi-kreatif.html
@@ -69,8 +69,8 @@
       <section id="us">
         <div class="container" data-aos="fade-up">
           <div class="row counters mt-5">
-            <div class="col-lg-3 text-center"></div>
-            <div class="col-lg-9 text-center">
+            <!-- <div class="col-lg-3 text-center"></div> -->
+            <div class="col-lg-12 text-center">
               <div class="section-header">
                 <h3 class="us-title">Apa Yang Kami Lakukan ?</h3>
                 <hr class="div" />
@@ -79,10 +79,10 @@
           </div>
 
           <div class="row counters mt-5">
-            <div class="col-lg-3 text-center">
+            <div class="col-lg-2 text-left" style="padding-left: 2rem;"">
               <a href="divisi.html"><i class="arrow-left"></i></a>
             </div>
-            <div class="col-lg-9 text-center">
+            <div class="col-lg-8 text-center">
               <p>Kami bekerja dengan menerapkan ide-ide kreatif yang kami miliki ke dalam platform media sosial yang dimiliki komunitas sepei Instagram, Facebook, Youtube.</p>
               <div class="row bg mt-5">
                 <div class="rectangle-divisi mb-2" style="padding: 20px;">
@@ -109,8 +109,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mt-2">
-            <h5 class="text-footer">Ketimbang Ngemis Bandung</h5>
-            <p class="text-justify">
+            <h5>Ketimbang Ngemis Bandung</h5>
+            <p class="text-justify text-footer">
               Komunitas yang bergerak dalam pemberian bantuan dana atau donasi kepada para lansia yang masih giat bekerja walau di usianya yang sudah senja.
             </p>
 
@@ -127,14 +127,14 @@
             <hr class="vl" />
           </div>
 
-          <div class="col-lg-4 mt-2">
-            <h6 class="text-footer">Address</h6>
+          <div class="col-lg-3 mt-2">
+            <h6>Address</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
                 <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
               </div>
               <div class="col-lg-10">
-                <p class="text-justify">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
+                <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
                 <p class="text-address">Show Map</p>
@@ -146,33 +146,33 @@
             <hr class="vl" />
           </div>
 
-          <div class="col-lg-3 mt-2">
-            <h6 class="text-footer">Contact Us</h6>
+          <div class="col-lg-4 mt-2">
+            <h6>Contact Us</h6>
             <!-- <ul class="footer-links">
               <li>0813-4347-8282</li>
               <li>@ndm3476g</li>
               <li>ketimbangngemis.bdg@gmail.com</li>
             </ul> -->
             <div class="row">
-              <div class="col-lg-2">
+              <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left">
-                <p>0813-4347-8282</p>
+              <div class="col-lg-11 text-left">
+                <p class="text-footer">0813-4347-8282</p>
               </div>
 
-              <div class="col-lg-2 mt-2">
+              <div class="col-lg-1 mt-2">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left mt-2">
-                <p>@ndm3476g</p>
+              <div class="col-lg-11 text-left mt-2">
+                <p class="text-footer">@ndm3476g</p>
               </div>
 
-              <div class="col-lg-2 mt-2">
+              <div class="col-lg-1 mt-2">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left mt-2">
-                <p>ketimbang.ngemis17@gmail.com</p>
+              <div class="col-lg-11 text-left mt-2">
+                <p class="text-footer">ketimbang.ngemis17@gmail.com</p>
               </div>
               <div class="col footer-newsletter mt-2">
                 <form class="footer-newsletter" action="" method="post"><input type="email" name="email" placeholder="Email Anda..." /><input type="submit" value="Kirim" /></form>
