--- a/galeri.html
+++ b/galeri.html
@@ -69,7 +69,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
-          <img src="assets/img/konten-header/Header-Galeri-940x600px.jpg" alt="" class="img-fluid" />
+          <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
 
     <main id="main">
       <!-- ======= About Us Section ======= -->
-      <section id="us">
+      <section id="us" style="padding-top: 80px;">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
             <h3 class="us-title-galeri">Sosok Mulia (SokMul) Bagi Kami</h3>
@@ -99,7 +99,7 @@
       <!-- ======= Galeri Section ======= -->
       <div class="container">
         <div class="section-header">
-          <h3 class="us-title-galeri" data-aos="fade-up">SokMul Yang Layak Kami Bantui</h3>
+          <h3 class="us-title-galeri" data-aos="fade-up">SokMul Yang Layak Kami Bantu</h3>
         </div>
       </div>
       <section id="galeri">
@@ -137,7 +137,7 @@
       <section id="us">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h3 class="us-title-galeri">Mereka Yang Kami Bantu</h3>
+            <h3 class="us-title-galeri" style="font-size: 30px;">Mereka Yang Kami Bantu</h3>
           </div>
           <div class="row counters mt-5">
             <div class="col-lg-4 col-sm-6 mb-4 text-center">
@@ -237,10 +237,10 @@
         </div>
       </section>
 
-      <section id="us">
+      <section id="us" style="padding-top: 80px;">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h3 class="us-title-galeri">Mereka Yang Membantu</h3>
+            <h3 class="us-title-galeri" style="font-size: 30px;">Mereka Yang Membantu</h3>
           </div>
           <div class="row counters mt-5">
             <div class="col-lg-3"></div>
@@ -286,28 +286,33 @@
     <footer class="site-footer">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5">
-            <h5 class="text-footer">Ketimbang Ngemis Bandung</h5>
-            <p class="text-justify">
+          <div class="col-lg-4 mt-2">
+            <h5>Ketimbang Ngemis Bandung</h5>
+            <p class="text-justify text-footer">
               Komunitas yang bergerak dalam pemberian bantuan dana atau donasi kepada para lansia yang masih giat bekerja walau di usianya yang sudah senja.
             </p>
+
             <div class="row">
               <div class="col mt-2">
-                <img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" />
-                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" />
+                <img width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-06.png" alt="" />
+                <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-05.png" alt="" />
                 <img class="ml-5" width="30" src="assets/img/icon/Ikon Ketimbang Ngemis-07.png" alt="" />
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4">
-            <h6 class="text-footer">Address</h6>
+          <div class="col">
+            <hr class="vl" />
+          </div>
+
+          <div class="col-lg-3 mt-2">
+            <h6>Address</h6>
             <div class="row">
               <div class="col-lg-2 mt-1">
-                <img width="50" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
+                <img width="40" src="assets/img/icon/Ikon Ketimbang Ngemis-01.png" alt="" />
               </div>
               <div class="col-lg-10">
-                <p class="text-justify">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
+                <p class="text-justify text-footer">Jalan Depok 4 No. 11 RT 02/ RW 05, Kelurahan Antapani Tengah, Kota Bandung.</p>
               </div>
               <div class="col">
                 <p class="text-address">Show Map</p>
@@ -315,33 +320,37 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
-            <h6 class="text-footer">Contact Us</h6>
+          <div class="col">
+            <hr class="vl" />
+          </div>
+
+          <div class="col-lg-4 mt-2">
+            <h6>Contact Us</h6>
             <!-- <ul class="footer-links">
               <li>0813-4347-8282</li>
               <li>@ndm3476g</li>
               <li>ketimbangngemis.bdg@gmail.com</li>
             </ul> -->
             <div class="row">
-              <div class="col-lg-2">
+              <div class="col-lg-1">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-02.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left">
-                <p>0813-4347-8282</p>
+              <div class="col-lg-11 text-left">
+                <p class="text-footer">0813-4347-8282</p>
               </div>
 
-              <div class="col-lg-2 mt-2">
+              <div class="col-lg-1 mt-2">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-03.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left mt-2">
-                <p>@ndm3476g</p>
+              <div class="col-lg-11 text-left mt-2">
+                <p class="text-footer">@ndm3476g</p>
               </div>
 
-              <div class="col-lg-2 mt-2">
+              <div class="col-lg-1 mt-2">
                 <img width="25" src="assets/img/icon/Ikon Ketimbang Ngemis-04.png" alt="" />
               </div>
-              <div class="col-lg-10 text-left mt-2">
-                <p>ketimbang.ngemis17@gmail.com</p>
+              <div class="col-lg-11 text-left mt-2">
+                <p class="text-footer">ketimbang.ngemis17@gmail.com</p>
               </div>
               <div class="col footer-newsletter mt-2">
                 <form class="footer-newsletter" action="" method="post"><input type="email" name="email" placeholder="Email Anda..." /><input type="submit" value="Kirim" /></form>
