Revisi Footer, Font, Foto Halaman Home, Galeri V-3

--- a/divisi-event.html
+++ b/divisi-event.html
@@ -91,7 +91,7 @@
                 <div class="rectangle-divisi mb-2" style="padding-left: 20px; padding-right: 20px;">
                   MENGADAKAN RAPAT RUTIN YANG DIADAKAN KOMUNITAS
                 </div>
-                <div class="rectangle-divisi">
+                <div class="rectangle-divisi mb-2">
                   MENYIAPKAN ACARA KUMPUL PERTAMA BAGI ANGGOTA BARU
                 </div>
               </div>
