--- a/divisi-medis.html
+++ b/divisi-medis.html
@@ -91,7 +91,7 @@
                 <div class="rectangle-divisi mb-2" style="padding-left: 20px; padding-right: 20px;">
                   MEMERIKSAKAN KESEHATAN PARA SOKMUL
                 </div>
-                <div class="rectangle-divisi">
+                <div class="rectangle-divisi mb-2">
                   MENGADAKAN PEMERIKSAAN KESEHATAN GRATIS DI PANTI JOMPO
                 </div>
               </div>
