--- a/divisi-public-relation.html
+++ b/divisi-public-relation.html
@@ -92,7 +92,7 @@
                 <div class="rectangle-divisi mb-2" style="padding-left: 20px; padding-right: 20px;">
                   MEREKRUT VOLUNTEER DAN MENGHIMPUN INFO SOKMUL DARI NETIZEN
                 </div>
-                <div class="rectangle-divisi">
+                <div class="rectangle-divisi mb-2">
                   MEMBANGUN KERJASAMA DENGAN KOMUNITAS, MEDIA, ATAU INSTANSI
                 </div>
               </div>
