--- a/divisi.html
+++ b/divisi.html
@@ -47,34 +47,41 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <!-- <section id="hero-profile">
-      <div class="container">
-        <div class="hero-container-profile">
+    <section>
+      <div class="container-fluid" style="background-color: #046671; padding-right: 0; height: 600px;">
+        <div class="container hero-text">
           <div class="row">
-            <div class="col-lg-5 text-justify">
-              <h1>
-                DIVISI KAMI
-              </h1>
+            <!-- <div class="col-lg-2" style="padding-top: 18rem;"></div> -->
+            <div class="col-lg-6 img-absolute-left" style="padding-left: 0;">
+              <img src="assets/img/konten-header/Header-Divisi.png" alt="" class="img-fluid" style="margin-top: 5rem;" />
             </div>
-            <div class="row">
-              <div class="col-lg-5 text-justify">
-                <p style="padding-left: 15px;">
-                  Dalam melaksanakan kegiatan komunitas, rekan-rekan anggota kami dibagi menjadi 5 divisi yang memiliki peranannya masingmasing. Seluruh 5 divisi tersebut saling bekerja sama dan berkoordinasi untuk memaksimalkan kinerja komunitas
-                  dalam membantu lansia.
-                </p>
+            <div class="col-lg-6" style="padding-top: 12rem;"></div>
+            <div class="col-lg-6" style="padding-top: 18rem;">
+              <div class="col-lg-12 text-justify">
+                <h1>
+                  DIVISI KAMI
+                </h1>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 text-justify">
+                  <p style="padding-left: 15px;">
+                    Dalam melaksanakan kegiatan komunitas, rekan-rekan anggota kami dibagi menjadi 5 divisi yang memiliki peranannya masingmasing. Seluruh 5 divisi tersebut saling bekerja sama dan berkoordinasi untuk memaksimalkan kinerja komunitas
+                    dalam membantu lansia.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <div class="container-fluid">
+    </section>
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
           <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Hero Section -->
 
     <main id="main">
