--- a/galeri.html
+++ b/galeri.html
@@ -45,34 +45,40 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <!-- <section id="hero-galeri">
-      <div class="container">
-        <div class="hero-container-galeri">
+    <section>
+      <div class="container-fluid" style="background-color: #046671; padding-right: 0; height: 600px;">
+        <div class="container hero-text">
           <div class="row">
-            <div class="col-lg-5">
-              <h1>
-                Perlakukan mereka seperti orang tua kita sendiri...
-              </h1>
-            </div>
-            <div class="row">
-              <div class="col-lg-5 text-justify">
-                <p style="padding-left: 10px;">
-                  Ada jutaan lansia yang berahan hidup dengan berjuang sendiri. Syukur, kami berhasil membantu sebagian kecil dari mereka. Mereka selayaknya adalah orang tua kita yang patut kita rawat. Kami mengabadikan sebagian kecil momen-momen
-                  indah yang kami lalui bersama rekan-rekan dan para sosok mulia.
-                </p>
+            <!-- <div class="col-lg-2" style="padding-top: 18rem;"></div> -->
+            <div class="col-lg-6" style="padding-top: 14rem;">
+              <div class="col-lg-12 text-justify" style="padding-left: 0;">
+                <h1>
+                  Perlakukan mereka seperti orang tua kita sendiri...
+                </h1>
               </div>
+              <div class="row">
+                <div class="col-lg-12 text-justify">
+                  <p>
+                    Ada jutaan lansia yang bertahan hidup dengan berjuang sendiri. Syukur, kami berhasil membantu sebagian kecil dari mereka. Mereka selayaknya adalah orang tua kita yang patut kita rawat. Kami mengabadikan sebagian kecil momen-momen
+                    indah yang kami lalui bersama rekan-rekan dan para sosok mulia.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 img-absolute" style="padding-right: 0;">
+              <img src="assets/img/konten-header/Header-Galeri.png" alt="" class="img-fluid" style="margin-top: 5rem;" />
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <div class="container-fluid">
+    </section>
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
-          <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
+          <img src="assets/img/konten-header/Galeri.jpg" alt="" class="img-fluid" />
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Hero Section -->
 
     <main id="main">
