--- a/profile.html
+++ b/profile.html
@@ -48,34 +48,40 @@
 
     <!-- ======= Hero Section ======= -->
     <!-- </section> -->
-    <!-- <section id="hero-profile">
-      <div class="container">
-        <div class="hero-container-profile">
+    <section>
+      <div class="container-fluid" style="background-color: #046671; padding-right: 0; height: 600px;">
+        <div class="container hero-text">
           <div class="row">
-            <div class="col-lg-5 text-justify">
-              <h1>
-                Kalau bukan kita, siapa lagi yang bantu para lansia ?
-              </h1>
-            </div>
-            <div class="row">
-              <div class="col-lg-5 text-justify">
-                <p style="padding-left: 15px;">
-                  Ketimbang Ngemis adalah sebuah komunitas yang fokus pada penyelenggaraan kegiatan di Kota Bandung berupa kegiatan sosial dengan memberi bantuan support dana kepada kaum lansia yang masih bekerja walau dengan keterbatasan usia atau
-                  fisik.
-                </p>
+            <!-- <div class="col-lg-2" style="padding-top: 18rem;"></div> -->
+            <div class="col-lg-6" style="padding-top: 16rem;">
+              <div class="col-lg-12 text-justify" style="padding-left: 0;">
+                <h1>
+                  Kalau bukan kita, siapa lagi yang bantu para lansia ?
+                </h1>
               </div>
+              <div class="row">
+                <div class="col-lg-12 text-justify">
+                  <p>
+                    Ketimbang Ngemis adalah sebuah komunitas yang fokus pada penyelenggaraan kegiatan di Kota Bandung berupa kegiatan sosial dengan memberi bantuan support dana kepada kaum lansia yang masih bekerja walau dengan keterbatasan usia atau
+                    fisik.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 img-absolute" style="padding-right: 0;">
+              <img src="assets/img/konten-header/Header-Profil.png" alt="" class="img-fluid" style="margin-top: 5rem;" />
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <div class="container-fluid">
+    </section>
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
-          <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
+          <img src="assets/img/konten-header/Header-Profil-V2.png" alt="" class="img-fluid" />
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Hero Section -->
 
     <main id="main">
