--- a/contact.html
+++ b/contact.html
@@ -45,34 +45,41 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <!-- <section id="hero-kontak">
-      <div class="container">
-        <div class="hero-container-kontak">
+    <section>
+      <div class="container-fluid" style="background-color: #046671; padding-right: 0; height: 600px;">
+        <div class="container hero-text">
           <div class="row">
-            <div class="col-lg-5">
-              <h1>
-                Anugerah bagi mereka yang ikhlas tanpa pamrih
-              </h1>
+            <!-- <div class="col-lg-2" style="padding-top: 18rem;"></div> -->
+            <div class="col-lg-6 img-absolute-left" style="padding-left: 0;">
+              <img src="assets/img/konten-header/Header-Divisi.png" alt="" class="img-fluid" style="margin-top: 5rem;" />
             </div>
-            <div class="row">
-              <div class="col-lg-5 text-justify">
-                <p style="padding-left: 15px;">
-                  Salah satu hal yang paling indah di dunia ini adalah melihat mereka yang membantu dan dibantu saling berinteraksi membangun ikatan persaudaraan yang kuat. Besar kecilnya andil yang diberikan satu sama lain tidaklah akan mempengaruhi
-                  ikatan silaturahmi yang sudah terjalin…
-                </p>
+            <div class="col-lg-6" style="padding-top: 12rem;"></div>
+            <div class="col-lg-6" style="padding-top: 14rem;">
+              <div class="col-lg-12 text-justify">
+                <h1>
+                  Anugerah bagi mereka yang ikhlas tanpa pamrih
+                </h1>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 text-justify">
+                  <p style="padding-left: 15px;">
+                    Salah satu hal yang paling indah di dunia ini adalah melihat mereka yang membantu dan dibantu saling berinteraksi membangun ikatan persaudaraan yang kuat. Besar kecilnya andil yang diberikan satu sama lain tidaklah akan
+                    mempengaruhi ikatan silaturahmi yang sudah terjalin…
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <div class="container-fluid">
+    </section>
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
-          <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
+          <img src="assets/img/konten-header/Kontak.jpg" alt="" class="img-fluid" />
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Hero Section -->
 
     <main id="main">
