--- a/divisi-kreatif.html
+++ b/divisi-kreatif.html
@@ -91,7 +91,7 @@
                 <div class="rectangle-divisi mb-2" style="padding-left: 25px; padding-right: 25px; padding-top: 20px; padding-bottom: 20px;">
                   MEMBANTU PUBLIKASI SOKMUL DI MEDIA SOSIAL
                 </div>
-                <div class="rectangle-divisi" style="padding: 20px;">
+                <div class="rectangle-divisi mb-2" style="padding: 20px;">
                   MEMBUAT DESAIN BANNER DAN FLYER UNTUK ACARA INTERNAL
                 </div>
               </div>
