--- a/divisi-lapangan.html
+++ b/divisi-lapangan.html
@@ -91,7 +91,7 @@
                 <div class="rectangle-divisi mb-2" style="padding-left: 20px; padding-right: 20px;">
                   BERKOORDINASI DENGAN DIVISI PUBLIC RELATION
                 </div>
-                <div class="rectangle-divisi">
+                <div class="rectangle-divisi mb-2">
                   MENGHIMPUN DATA-DATA SOKMUL YANG AKAN DIBERI BANTUAN
                 </div>
               </div>
