--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 px-0 mx-0">
-          <img src="assets/img/konten-header/konten-01.png" alt="" class="img-fluid" />
+          <img src="assets/img/konten-header/Home.jpg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
